# akari

./: Cargo.toml  IMPLEMENTATION.md  README.md  REQUIRED_ART.md
.github/workflows/: rust.yml
akari_core/: Cargo.toml
akari_core/src/: config.rs  data.rs  environment.rs  input.rs  lib.rs  ressources.rs  spritesheet.rs  time.rs
akari_core/src/environment/: chunk.rs  mod.rs
akari_core/src/systems/: animation.rs  camera.rs  draw.rs  fixed_collision.rs  gravity.rs  input_buffer.rs  mod.rs  physics.rs  player.rs
akari_game/: Cargo.toml
akari_game/src/: init.rs  main.rs
ressources/: environment.ron  environment.rs  game_config.ron
ressources/environment/: chunk1x1.ron  chunk2x1.ron  test_chunk.ron  test_chunk2.ron  world.ron
ressources/player/: animations.ron  falling_sheet.ron  idle_sheet.ron  jump_sheet.ron  jumping_sheet.ron  on_jump_sheet.ron  start_falling_sheet.ron
ressources/save/: test_save.ron
src/: config.rs  data.rs  environment.rs  init.rs  input.rs  lib.rs  main.rs  physics.rs  ressources.rs  save.rs  spritesheet.rs  time.rs
src/environment/: chunk.rs  mod.rs
src/systems/: animation.rs  bridge_collision.rs  draw.rs  editor.rs  fadeout.rs  fixed_collision.rs  gravity.rs  input_buffer.rs  mod.rs  physics.rs  player.rs
textures/: README.md
textures/player/: jump_fall.ron  run.ron  run_into_obstacle.ron
