[package]
name = "akari_core"
version = "0.1.0"
authors = ["Bastian Kauschke <bastian_kauschke@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["serde_derive"] }
ron = "0.5.1"
ordered-float = "1"
log = "0.4"
crow = "0.3.0"
crow_ecs = { git = "https://github.com/lcnr/crow_ecs" }
crow_anim = { git = "https://github.com/lcnr/crow_anim" }
thread_profiler = { version = "0.3", optional = true }

[features]
profiler = ["thread_profiler", "thread_profiler/thread_profiler"]