[package]
name = "akari_game"
version = "0.1.0"
authors = ["Bastian Kauschke <bastian_kauschke@hotmail.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
akari_core = { path = "../akari_core" }
crow = "0.3"

thread_profiler = { version = "0.3", optional = true }

[features]
profiler = ["thread_profiler", "thread_profiler/thread_profiler", "akari_core/thread_profiler"]